--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -258,7 +258,7 @@
 
 /* general typography */
 .leaflet-container {
-	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+	font: 14px/1.5 monospace;
 	}
 
 
@@ -322,7 +322,7 @@
 
 .leaflet-control-zoom-in,
 .leaflet-control-zoom-out {
-	font: bold 18px 'Lucida Console', Monaco, monospace;
+	font: bold 18px monospace;
 	text-indent: 1px;
 	}
 
