--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,14 @@ button {
   text-align: center;
   font-size: 24px;
   padding: 16px;
-  border: 0;
+  border: 1px solid #FF3B30;
   border-radius: 8px;
-  width: 220px;
   font-family: monospace;
+}
+button.on {
+  color: #FF3B30;
+  background-color: #fff;
+  border: 1px solid #FF3B30;
 }
 .spots {
   fill: #3E93FF; /*blue*/
